@@ -3,7 +3,7 @@ dvisvgm -- A DVI to SVG converter
 DESCRIPTION
 
  dvisvgm is a utility for TeX/LaTeX users. It converts
- DVI files to the XML-based Scalable Vector Graphics format.
+ DVI files to the XML-based scalable vector graphics format SVG.
 
 
 DEPENDENCIES
